--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "navigo": "^8.11.1",
-    "pnpm": "^10.23.0"
+    "pnpm": "^10.23.0",
+    "sass": "^1.94.2"
   }
 }
