--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "navigo": "^8.11.1",
     "pnpm": "^10.23.0",
     "sass": "^1.94.2"
