--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.13.1",
     "navigo": "^8.11.1",
     "pnpm": "^10.23.0",
-    "sass": "^1.94.2"
+    "sass": "^1.94.2",
+    "swiper": "^12.0.3"
   }
 }
